syntax = "proto3";

package lith;

import "google/api/annotations.proto";

import "api/protos/request.proto";

// LithServerService defines the service that manages distributed clients
// for a given multiplexed audio channel stream.
service LithServerService {
    // Get represents the single endpoint used by any client type to obtain
    // any resource stored by or managed in the server.
    rpc Get(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/v1/get"
        };
    };

}

